Fix services overflow issue on old browser versions

--- a/css/root.css
+++ b/css/root.css
@@ -557,6 +557,7 @@
     padding-top: 7.5em;
     padding-bottom: 2em;
     background-color: var(--primary);
+    min-width: min-content;
   }
   #int-hero:before {
     content: '';
